Image layout problem is fixed

--- a/color.scss
+++ b/color.scss
@@ -1,18 +1,12 @@
 
 $clr_header:hsl(200,100,62);
- 
 $clr_footer:hsl(167,44,70);
-
-
-
+ 
 $soft_red:hsl(7, 99%, 70%);
-$yellow: hsl(51, 100%, 49%);
+$clr_yellow: hsl(51, 100%, 49%);
 $dark_cyan: hsl(167, 40%, 24%);
 $dark_blue:hsl(198, 62%, 26%);
 $cyan_moderate: hsl(168, 34%, 41%);
-
-
-
  
 $dark_desaturated_blue:hsl(212, 27%, 19%);
 $clr_grayish_darkblue:hsl(213, 9%, 39%);
